Header: Remove margin from dropdown button to fix alignment bug
See https://github.com/WordPress/wporg-mu-plugins/issues/194#issuecomment-1245988332

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -157,6 +157,7 @@
 				padding-right: calc(var(--wp--style--block-gap) / 2);
 				height: auto;
 				width: auto;
+				margin: 0;
 				line-height: inherit;
 			}
 		}
